initSidebarItems({"enum":[["RequestDataMessage_RequestType",""],["RequestEventMessage_TriggerType",""]],"fn":[["file_descriptor_proto",""],["parse_descriptor_proto",""]],"static":[["file_descriptor_proto_data",""],["file_descriptor_proto_lazy",""]],"struct":[["Cycle",""],["DataMessage",""],["RequestDataMessage",""],["RequestEventMessage",""],["TriggerMessage",""]]});